<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>mobile.suncorp</groupId>
  <artifactId>suncorp_automation_aos</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  
 <!-- variables below hold the version numbers of referenced libraries --> 
  	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<selenium.version>3.6.0</selenium.version>
		<selenium-server.version>3.6.0</selenium-server.version>
		<testng.version>6.8.21</testng.version>
		<appium.java-client.version>5.0.4</appium.java-client.version>
		<com.googlecode.json-simple.version>1.1.1</com.googlecode.json-simple.version>
	</properties>
  
 <!-- list of project specific dependencies are listed below -->
 	<dependencies>
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-java</artifactId>
			<version>${selenium.version}</version>
		</dependency>
		
		<dependency>
        		<groupId>org.seleniumhq.selenium</groupId>
        		<artifactId>selenium-server</artifactId>
        		<version>${selenium-server.version}</version>
   		</dependency> 

		<dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<version>${testng.version}</version>
		</dependency>

		<dependency>
			<groupId>io.appium</groupId>
			<artifactId>java-client</artifactId>
			<version>${appium.java-client.version}</version>
		</dependency>
		<!-- If you need to parse JSON files in your project then include this below library  -->
		<dependency>
    		<groupId>com.googlecode.json-simple</groupId>
    		<artifactId>json-simple</artifactId>
    		<version>${com.googlecode.json-simple.version}</version>
		</dependency>
	</dependencies>
  <!-- The below surefire plugin is used to pass parameters to TestNG suite from command line with "mvn clean test -D<parameter=value>". For ex: mvn clean test -DpVer=9.3
       The TestNG run parameter values like priority/group can be passed without declaration below like "mvn clean test -Dgroups=regression"  -->
  <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.19.1</version>
                <configuration>
                <!-- Suite testng xml file to consider for test execution -->
                    <suiteXmlFiles>
                        <suiteXmlFile>testng.xml</suiteXmlFile>
                    </suiteXmlFiles>
                    <systemPropertyVariables>
                     <propertyName>UDID</propertyName>
                    </systemPropertyVariables>
                    <properties>
                  	  	<property>
              				<name>listener</name>
 			            	<value>automation.framework.utils.TestListner</value>
            			</property>
            		</properties>
                </configuration>
            </plugin>
        <!-- /plugins-->
    <!--  /build-->
  
  <!-- The below builds plug-ins are required to configure the maven package compatible to submit to AWS device farm -->
  <!--  build-->
		<!--  plugins-->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>2.6</version>
				<executions>
					<execution>
						<goals>
							<goal>test-jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>2.10</version>
				<executions>
					<execution>
						<id>copy-dependencies</id>
						<phase>package</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.directory}/dependency-jars/</outputDirectory>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>2.5.4</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
						<configuration>
							<finalName>zip-with-dependencies</finalName>
							<appendAssemblyId>false</appendAssemblyId>
							<descriptors>
								<descriptor>src/main/assembly/zip.xml</descriptor>
							</descriptors>
						</configuration>
					</execution>
				</executions>
			</plugin>

		 <plugin>
    <groupId>org.apache.maven.plugins</groupId>
    <artifactId>maven-compiler-plugin</artifactId>
    <version>3.2</version> <!-- or whatever current version -->
    <configuration>
      <source>1.8</source>
      <target>1.8</target>
    </configuration>
  </plugin>
  	</plugins>
	</build >
  
</project>